reformat the project to set up the database based n MVC

--- a/scooteq/templates/layout.html
+++ b/scooteq/templates/layout.html
@@ -58,9 +58,9 @@
             <p class='text-muted'>You can put any information here you'd like.
               <ul class="list-group">
                 <li class="list-group-item list-group-item-light">Latest Posts</li>
-                <li class="list-group-item list-group-item-light">Ethan"feel up later"</li>
-                <li class="list-group-item list-group-item-light">Franzi"feel up later"</li>
-                <li class="list-group-item list-group-item-light">Rawezh"feel up later"</li>
+                <li class="list-group-item list-group-item-light">Ethan"fill up later"</li>
+                <li class="list-group-item list-group-item-light">Franzi"fill up later"</li>
+                <li class="list-group-item list-group-item-light">Rawezh"fill up later"</li>
               </ul>
             </p>
           </div>
