--- a/scooteq/templates/account.html
+++ b/scooteq/templates/account.html
@@ -75,6 +75,7 @@
                              <span class="text-danger">{{ error }}</span></br>
                             {% endfor %}
                     {% endif %}
+                </div>
             </fieldset>
             <div class="form-group">
                 {{ form.submit(class="btn btn-outline-info") }}
