--- a/scooteq/static/main.css
+++ b/scooteq/static/main.css
@@ -95,7 +95,7 @@ a.article-title:hover {
   display: block;
 }
 
-.start{
+.start, .pause, .stop, .reset{
   display: block;
   width: 300px;
   text-align: center;
@@ -113,102 +113,15 @@ a.article-title:hover {
   font-weight: bold;
 }
 
-.start:hover{
+.start:hover, .stop:hover, .pause:hover, .reset:hover{
   background-color: darkslateblue;
+  outline: none;
 }
 
-.start:active{
-  background-color: #e3e3e3;
+.start:active, .stop:active, .pause:active, .reset:active{
+  background-color: white;
+  color: #333333;
   box-shadow: none;
-  margin-bottom: 0;
-  margin-top: 4px;
-}
-
-.stop{
-  display: block;
-  width: 300px;
-  text-align: center;
-  background-color: lightsteelblue;
-  margin: auto;
-  margin-bottom: 20px;
-  padding: 5px 0;
-  border-radius: 15px;
-  box-shadow: 0px 0px rgba(0, 0, 0, 0.15), 0 0 10px rgba(0, 0, 0, 0.30) ;
-  border: 0;
-  outline: 0;
-  font-size: 30px;
-  color: white;
-  cursor: pointer;
-  font-weight: bold;
-}
-
-.stop:hover{
-  background-color: darkslateblue;
-}
-
-.stop:active{
-  background-color: #e3e3e3;
-  box-shadow: none;
-  margin-bottom: 0;
-  margin-top: 4px;
-}
-
-.pause{
-  display: block;
-  width: 300px;
-  text-align: center;
-  background-color: lightsteelblue;
-  margin: auto;
-  margin-bottom: 20px;
-  padding: 5px 0;
-  border-radius: 15px;
-  box-shadow: 0px 0px rgba(0, 0, 0, 0.15), 0 0 10px rgba(0, 0, 0, 0.30) ;
-  border: 0;
-  outline: 0;
-  font-size: 30px;
-  color: white;
-  cursor: pointer;
-  font-weight: bold;
-}
-
-.pause:hover{
-  background-color: darkslateblue;
-}
-
-.pause:active{
-  background-color: #e3e3e3;
-  box-shadow: none;
-  margin-bottom: 0;
-  margin-top: 4px;
-}
-
-.reset{
-  display: block;
-  width: 300px;
-  text-align: center;
-  background-color: lightsteelblue;
-  margin: auto;
-  margin-bottom: 20px;
-  padding: 5px 0;
-  border-radius: 15px;
-  box-shadow: 0px 0px rgba(0, 0, 0, 0.15), 0 0 10px rgba(0, 0, 0, 0.30) ;
-  border: 0;
-  outline: 0;
-  font-size: 30px;
-  color: white;
-  cursor: pointer;
-  font-weight: bold;
-}
-
-.reset:hover{
-  background-color: darkslateblue;
-}
-
-.reset:active{
-  background-color: #e3e3e3;
-  box-shadow: none;
-  margin-bottom: 0;
-  margin-top: 4px;
 }
 
 
