--- a/scooteq/templates/home.html
+++ b/scooteq/templates/home.html
@@ -2,7 +2,8 @@
 {% extends "layout.html" %}
 {% block content %}
     <link rel="stylesheet" href="home.css">
-    <h1>Start page!</h1>
+    <h1 class="headline">Welcome to </h1><h1 class="headlinSco">ScooTec</h1>
+    <p class="underHeadline">Your confidential advisor for renting and providing of e-scooters</p>
 
     <form name="form_main" class="display">
   <div class="timer">
