--- a/scooteq/templates/layout.html
+++ b/scooteq/templates/layout.html
@@ -26,8 +26,13 @@
           </button>
           <div class="collapse navbar-collapse" id="navbarToggle">
             <div class="navbar-nav mr-auto">
-              <a class="nav-item nav-link" href="{{ url_for('home') }}">Home</a>
-              <a class="nav-item nav-link" href="{{ url_for('about') }}">About</a>
+                {% if current_user.is_authenticated %}
+                    <a class="nav-item nav-link" href="{{ url_for('start') }}">Home</a>
+                    <a class="nav-item nav-link" href="{{ url_for('about') }}">About</a>
+                {% else %}
+                  <a class="nav-item nav-link" href="{{ url_for('home') }}">Home</a>
+                  <a class="nav-item nav-link" href="{{ url_for('about') }}">About</a>
+                {% endif %}
             </div>
             <!-- Navbar Right Side -->
             <div class="navbar-nav">
