pause and reset are gone

--- a/scooteq/templates/home.html
+++ b/scooteq/templates/home.html
@@ -1,6 +1,9 @@
 
 {% extends "layout.html" %}
 {% block content %}
-    <h1>Home!</h1>
+             <h1 class="headline">Welcome to </h1><h1 class="headlinSco">ScooTec</h1>
+    <p class="underHeadline">Your confidential advisor for renting and providing of e-scooters.</p>
+    <p>You have to login yourself to rent the scooters.</p>
+
 
 {% endblock content %}
