--- a/scooteq/templates/start.html
+++ b/scooteq/templates/start.html
@@ -1,6 +1,7 @@
 {% extends 'layout.html' %}
 {% block content %}
-        <h1>Start page!</h1>
+         <h1 class="headline">Welcome to </h1><h1 class="headlinSco">ScooTec</h1>
+    <p class="underHeadline">Your confidential advisor for renting and providing of e-scooters</p>
 
     <form name="form_main" class="display">
   <div class="timer">
@@ -12,8 +13,6 @@
   <div class="control">
   <button type="button" name="start" class="start">start</button>
   <button type="button" name="stop" class="stop">stop</button>
-  <button type="button" name="pause" class="pause">pause</button>
-  <button type="button" name="reset" class="reset">reset</button>
     </div>
 
 
