--- a/scooteq/static/main.css
+++ b/scooteq/static/main.css
@@ -87,7 +87,7 @@ a.article-title:hover {
 }
 
 .headlinSco {
-  font-size: 100px;
+  font-size: 200px;
   font-weight: bold;
   margin-top:-15px;
   font-family: aakar;
@@ -96,6 +96,19 @@ a.article-title:hover {
 .underHeadline{
   font-size: 30px;
   margin-top: -20px;
+}
+
+.underText{
+  font-size: 20px;
+}
+
+
+.benefits{
+  margin-top: 30px;
+}
+
+.bottom{
+  margin-top: 30px;
 }
 
 .display{
@@ -150,3 +163,7 @@ a.article-title:hover {
   font-weight: bold;
   margin-top: 10px;
 }
+
+
+
+
