--- a/scooteq/templates/layout.html
+++ b/scooteq/templates/layout.html
@@ -15,6 +15,8 @@
     {% else %}
         <title>Scooteq</title>
     {% endif %}
+
+    {%  block head %} {% endblock %}
 </head>
 <body>
     <header class="site-header">
